add manual trigger

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,13 @@ name: Deploy ASP.NET Application
 on:
   push:
     branches:
-      - dev
+      - main
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Which environment to deploy to'
+        required: true
+        default: 'development'
 
 jobs:
   build:
